--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -13,7 +13,10 @@ jobs:
     steps:
       - name: Install system dependencies
         run: |
-          sudo apt update && sudo apt install -y wget tar make gcc git libmagic1 file binutils
+          sudo apt update && sudo apt install -y \
+            wget tar make gcc git \
+            libmagic1 libtool autoconf automake \
+            libglib2.0-dev libsdl1.2-dev zlib1g-dev
 
       - name: Download and setup GCW0 toolchain
         run: |
@@ -25,21 +28,24 @@ jobs:
           sudo chmod +x relocate-sdk.sh
           sudo ./relocate-sdk.sh
           sudo chown -R $USER:$USER /opt/gcw0-toolchain
-          /opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-gcc --version || echo "工具链可能存在问题，但继续执行"
 
       - name: Set environment variables
         run: |
-          export CROSS_COMPILE=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-
-          export SYSROOT=/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot
+          export TOOLCHAIN_PATH=/opt/gcw0-toolchain/usr
+          export CROSS_COMPILE=${TOOLCHAIN_PATH}/bin/mipsel-gcw0-linux-uclibc-
+          export SYSROOT=${TOOLCHAIN_PATH}/mipsel-gcw0-linux-uclibc/sysroot
+          export PATH=${TOOLCHAIN_PATH}/bin:${PATH}
           export CC=${CROSS_COMPILE}gcc
           export CXX=${CROSS_COMPILE}g++
           export AR=${CROSS_COMPILE}ar
           export LD=${CROSS_COMPILE}ld
           export STRIP=${CROSS_COMPILE}strip
-          export CFLAGS="-include stdio.h -I. -I./libpcsxcore -I./plugins -I./include -DMAXPATHLEN=4096 -DNO_ARM_FEATURES -DMIPS_ARCH=1 -march=mips32r2 -mtune=mips32r2 -mhard-float -mabi=32 -ffast-math -O2 -fPIC -D__mips__=1 -D__mipsel__=1 -DMIPS32=1 -DMIPS_HARD_FLOAT=1"
+          export RANLIB=${CROSS_COMPILE}ranlib
+          export CFLAGS="-march=mips32 -mtune=mips32r2 -mhard-float -O2 -ffast-math -fdata-sections -ffunction-sections -I${SYSROOT}/usr/include"
           export CXXFLAGS="${CFLAGS}"
-          export LDFLAGS="-shared -fPIC -Wl,--no-gc-sections -Wl,-z,now -Wl,-z,relro --sysroot=${SYSROOT} -lm -lpthread -ldl"
+          export LDFLAGS="-L${SYSROOT}/usr/lib -Wl,--gc-sections"
           
+          echo "TOOLCHAIN_PATH=$TOOLCHAIN_PATH" >> $GITHUB_ENV
           echo "CROSS_COMPILE=$CROSS_COMPILE" >> $GITHUB_ENV
           echo "SYSROOT=$SYSROOT" >> $GITHUB_ENV
           echo "CC=$CC" >> $GITHUB_ENV
@@ -50,175 +56,118 @@ jobs:
           echo "CFLAGS=$CFLAGS" >> $GITHUB_ENV
           echo "CXXFLAGS=$CXXFLAGS" >> $GITHUB_ENV
           echo "LDFLAGS=$LDFLAGS" >> $GITHUB_ENV
-          echo "/opt/gcw0-toolchain/usr/bin" >> $GITHUB_PATH
+          echo "PATH=${TOOLCHAIN_PATH}/bin:${PATH}" >> $GITHUB_ENV
 
       - name: Checkout pcsx_rearmed source code
         uses: actions/checkout@v4
         with:
           repository: libretro/pcsx_rearmed
           path: pcsx_rearmed
-          fetch-depth: 0
+          fetch-depth: 1
 
-      - name: Patch source files (核心修复：ARM依赖+REV宏+lightrec宏函数冲突)
+      - name: Apply GCW0 specific patches
         run: |
           cd pcsx_rearmed
-          # 1. 移除ARM依赖
-          sed -i '/#include "arm_features.h"/d' libpcsxcore/cdrom.c || echo "未找到arm_features.h包含语句，跳过"
-          sed -i '1i #include <stdio.h>' libpcsxcore/psxcommon.h
-          sed -i '1i #include <stdlib.h>' libpcsxcore/psxcommon.h
-          sed -i '1i #include <string.h>' libpcsxcore/psxcommon.h
-          # 2. 修复REV宏引用
-          sed -i 's/REV/GIT_VERSION/g' libpcsxcore/misc.c
-          # 3. 修复lightrec宏与函数冲突（核心新增）
-          # 在mem.c的函数定义前undef冲突宏，让函数正常解析
-          sed -i '/int lightrec_init_mmap(void)/i #undef lightrec_init_mmap' libpcsxcore/lightrec/mem.c
-          sed -i '/void lightrec_free_mmap(void)/i #undef lightrec_free_mmap' libpcsxcore/lightrec/mem.c
-          # 补充系统头文件，解决lseek/read/close等函数隐式声明警告
-          sed -i '1i #include <unistd.h>' deps/libchdr/deps/zlib-1.3.1/gzlib.c
-          sed -i '1i #include <unistd.h>' deps/libchdr/deps/zlib-1.3.1/gzread.c
-          sed -i '1i #include <unistd.h>' deps/libchdr/deps/zlib-1.3.1/gzwrite.c
-          echo "✅ 已修补源码：移除ARM依赖 + 修复REV宏 + 解决lightrec宏函数冲突 + 补充系统头文件"
-
-      - name: Generate missing revision.h file
-        run: |
-          cd pcsx_rearmed
-          mkdir -p include
-          cat > include/revision.h << EOF
-          #ifndef REVISION_H
-          #define REVISION_H
-          #define GIT_VERSION "32e2193b"
-          #define REV GIT_VERSION
-          #define BUILD_DATE "__DATE__ __TIME__"
-          #endif // REVISION_H
+          # 创建适用于GCW0的配置文件
+          cat > platform.mk << 'EOF'
+          # GCW0平台特定配置
+          CC = $(CROSS_COMPILE)gcc
+          CXX = $(CROSS_COMPILE)g++
+          AR = $(CROSS_COMPILE)ar
+          STRIP = $(CROSS_COMPILE)strip
+          RANLIB = $(CROSS_COMPILE)ranlib
+          
+          CFLAGS += -march=mips32 -mtune=mips32r2 -mhard-float -O2 -ffast-math -fdata-sections -ffunction-sections
+          CXXFLAGS += $(CFLAGS)
+          LDFLAGS += -Wl,--gc-sections
+          
+          # 启用必要的功能
+          HAVE_DYNAREC = 1
+          DYNAREC = lightrec
+          GPU = peops
+          SOUND_DRIVERS = sdl
+          DISABLE_THREADS = 0
           EOF
-          cp include/revision.h ./revision.h
-          echo "✅ 已手动生成revision.h文件"
 
-      - name: Verify critical header files exist
+      - name: Build pcsx_rearmed with proper configuration
         run: |
           cd pcsx_rearmed
-          if [ ! -f libpcsxcore/psemu_plugin_defs.h ]; then
-            find . -name "psemu_plugin_defs.h" -type f -exec cp {} libpcsxcore/ \;
-          fi
-          grep -q "REV" include/revision.h || echo "WARNING: revision.h中未找到REV宏定义"
-          ls -lh libpcsxcore/psemu_plugin_defs.h include/revision.h revision.h || echo "部分头文件缺失，继续尝试编译"
-
-      - name: Generate complete config.h
-        run: |
-          cd pcsx_rearmed
-          cat > config.h << EOF
-          #define ARCH_MIPS 1
-          #define ARCH_MIPSEL 1
-          #define __mips__ 1
-          #define __mipsel__ 1
-          #define MIPS32 1
-          #define MIPS32R2 1
-          #define MIPS_HARD_FLOAT 1
-          #define __mips_abi_hard 1
-          #define MIPS_ARCH 1
           
-          #define MAXPATHLEN 4096
-          #define PATH_MAX 4096
+          # 清理之前的构建
+          make -f Makefile.libretro clean || true
           
-          #define HAVE_STDIO_H 1
-          #define HAVE_STDLIB_H 1
-          #define HAVE_STRING_H 1
-          #define HAVE_UNISTD_H 1
-          #define HAVE_SYS_TYPES_H 1
-          #define HAVE_SYS_STAT_H 1
-          #define HAVE_SYS_PARAM_H 1
-          #define HAVE_LIMITS_H 1
-          #define HAVE_SYS_MMAN_H 1
-          #define HAVE_PTHREAD_H 1
-          
-          #define NO_ARM_FEATURES 1
-          #undef ARM_ARCH
-          
-          #define HAVE_LIBRETRO 1
-          #define LIBRETRO_API __attribute__((visibility("default")))
-          
-          #define HAVE_DYNAREC 1
-          #define DYNAREC_MIPS 1
-          #define DYNAREC_LIGHTREC 1
-          #define DYNAREC_NONE 0
-          #define GPU_PEOPS 1
-          #define GPU_PEOPS_MIPS 1
-          #define SOUND_DRIVER_SDL 1
-          #define SOUND_DRIVER_NONE 0
-          #define DISABLE_THREADS 0
-          #define HAVE_THREADS 1
-          
-          #define HAVE_MEMCPY 1
-          #define HAVE_MEMSET 1
-          #define HAVE_MEMMOVE 1
-          #define HAVE_STRCMP 1
-          #define HAVE_STRNCMP 1
-          #define HAVE_STRCASECMP 1
-          #define HAVE_STRDUP 1
-          #define HAVE_STRERROR 1
-          #define HAVE_VSNPRINTF 1
-          #define HAVE_PRINTF 1
-          #define HAVE_SNPRINTF 1
-          #define HAVE_MALLOC 1
-          #define HAVE_FREE 1
-          #define HAVE_REALLOC 1
-          
-          #define SYSROOT "${{ env.SYSROOT }}"
-          #define CROSS_COMPILE "${{ env.CROSS_COMPILE }}"
-          
-          #define HAVE_GCC_ATOMICS 1
-          #define HAVE_GCC_BUILTINS 1
-          #define HAVE_INLINE 1
-          #define PACKAGE_VERSION "gcw0-20260106"
-          #define VERSION "gcw0-20260106"
-          EOF
-          if [ ! -f config.h ]; then
-            echo "ERROR: 生成config.h失败！"
-            exit 1
-          fi
-          echo "✅ config.h 生成成功"
-
-      - name: Pre-build verification
-        run: |
-          cd pcsx_rearmed
-          if [ ! -f config.h ]; then exit 1; fi
-          grep -q "REV" libpcsxcore/misc.c && echo "WARNING: misc.c中仍存在REV引用" || echo "✅ misc.c中REV已替换"
-          # 验证lightrec宏undef是否生效
-          grep -q "#undef lightrec_init_mmap" libpcsxcore/lightrec/mem.c || echo "WARNING: lightrec宏undef未生效"
-          echo "✅ 预编译验证通过"
-
-      - name: Build pcsx_rearmed libretro core
-        run: |
-          cd pcsx_rearmed
-          make -f Makefile.libretro clean || rm -f pcsx_rearmed_libretro.so
+          # 使用正确的配置构建
           make -f Makefile.libretro \
-            PLATFORM=unix \
+            platform=gcw0 \
             ARCH=mipsel \
-            CROSS_COMPILE=${{ env.CROSS_COMPILE }} \
-            CC=${{ env.CC }} \
-            CXX=${{ env.CXX }} \
-            AR=${{ env.AR }} \
-            LD=${{ env.LD }} \
+            WITH_DYNAREC=lightrec \
+            GPU_PEOPS=1 \
+            BUILTIN_GPU=peops \
+            CORE_DEFINES="-D__GCW0__ -DHAVE_LIGHTREC -DUSE_LIBRETRO_VFS" \
+            CC="${{ env.CC }}" \
+            CXX="${{ env.CXX }}" \
+            AR="${{ env.AR }}" \
+            LD="${{ env.LD }}" \
             CFLAGS="${{ env.CFLAGS }}" \
             CXXFLAGS="${{ env.CXXFLAGS }}" \
             LDFLAGS="${{ env.LDFLAGS }}" \
-            HAVE_DYNAREC=1 \
-            DYNAREC=lightrec \
-            GPU=peops \
-            SOUND=null \
-            HAVE_THREADS=0 \
-            -j1
-          ${{ env.STRIP }} --strip-unneeded pcsx_rearmed_libretro.so || echo "strip失败，跳过"
+            -j$(nproc) \
+            VERBOSE=1 2>&1 | tee build.log
 
-      - name: Verify build result
+      - name: Check build output and strip if needed
         run: |
           cd pcsx_rearmed
+          
           if [ -f pcsx_rearmed_libretro.so ]; then
-            echo "✅ 编译成功！"
+            echo "✅ 编译成功！原始文件大小:"
             ls -lh pcsx_rearmed_libretro.so
-            file pcsx_rearmed_libretro.so
+            
+            # 如果文件太小（< 500KB），尝试其他配置
+            FILESIZE=$(stat -c%s pcsx_rearmed_libretro.so)
+            if [ $FILESIZE -lt 500000 ]; then
+              echo "⚠️ 文件大小异常 ($FILESIZE 字节)，尝试备用构建方法..."
+              
+              # 方法1: 尝试使用不同的GPU后端
+              make -f Makefile.libretro clean
+              make -f Makefile.libretro \
+                platform=gcw0 \
+                ARCH=mipsel \
+                WITH_DYNAREC=lightrec \
+                GPU=unai \
+                CORE_DEFINES="-D__GCW0__ -DHAVE_LIGHTREC" \
+                -j$(nproc)
+                
+              if [ -f pcsx_rearmed_libretro.so ] && [ $(stat -c%s pcsx_rearmed_libretro.so) -gt 500000 ]; then
+                echo "✅ 备用构建成功！文件大小正常。"
+              else
+                # 方法2: 尝试禁用动态重编译
+                make -f Makefile.libretro clean
+                make -f Makefile.libretro \
+                  platform=gcw0 \
+                  ARCH=mipsel \
+                  WITH_DYNAREC=none \
+                  GPU=peops \
+                  -j$(nproc)
+              fi
+            fi
+            
+            # 最终检查
+            if [ -f pcsx_rearmed_libretro.so ]; then
+              FINAL_SIZE=$(stat -c%s pcsx_rearmed_libretro.so)
+              echo "最终文件大小: $FINAL_SIZE 字节"
+              
+              # 检查文件类型
+              echo "文件类型:"
+              file pcsx_rearmed_libretro.so || true
+              
+              # 检查符号表
+              echo "符号表检查:"
+              ${CROSS_COMPILE}readelf -h pcsx_rearmed_libretro.so 2>/dev/null || true
+            fi
           else
-            echo "ERROR: 编译产物缺失！"
+            echo "❌ 编译失败！找不到输出文件"
+            echo "构建日志:"
+            cat build.log 2>/dev/null || echo "没有构建日志"
             exit 1
           fi
 
